--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 	<title>CatClicker (Dev)</title>
 </head>
 <body>
-	<h3 style="font-weight: normal; text-align: center;"><div id="coinval" class="inl" style="font-weight: bold; color: lime;">0</div> CatCoins -- x<div id="coinmul" class="inl" style="color: red; font-weight: bold;">1.0</div></h3>
+	<h3 style="font-weight: normal; text-align: center;"><div id="coinval" class="inl" style="font-weight: bold; color: lime;">0</div> CatCoins -- x<div id="coinmul" class="inl" style="color: red; font-weight: bold;">1.0</div> | +<span id="coinpc" style="color: blue;">1</span> CatCoins/click</h3> <!-- why didn't i use span from the start :pain: -->
     <div class="centerbutton">
 	    <img id="ccaddbutton" src="https://popcat.click/img/p.1e9d00be.png" width="390px" height="490px"></img>
     </div>
-    <button class="generators-buttons canPurchase">
+    <button class="generators-buttons canPurchase" id="Purchase UC">
         Untrained Cat (<span id="UntrainedCat-Amount">0</span>)<br>
-        does stuff<br>
-        cost: <span id="UntrainedCat-Cost">placeholder</span>
+        not very good at being internets cat<br>
+        cost: <span id="UntrainedCat-Cost">10</span>
     </button>
 
     <br><br>
